Refactoring in progress, GeneratorImpl is compilable.